- FC fixed for some devices with 2.2, 2.3 Android versions.

--- a/ActionsContentViewExample/res/layout/action_list_item.xml
+++ b/ActionsContentViewExample/res/layout/action_list_item.xml
@@ -20,8 +20,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
-    android:minHeight="?android:attr/listPreferredItemHeightSmall"
-    android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
-    android:paddingRight="?android:attr/listPreferredItemPaddingRight"
-    android:textAppearance="?android:attr/textAppearanceListItemSmall"
+    android:minHeight="48dip"
+    android:paddingLeft="6dip"
+    android:paddingRight="6dip"
+    android:textAppearance="?android:attr/textAppearanceLarge"
     android:textColor="@android:color/white" />
