--- a/ActionsContentViewLib/res/values/attrs.xml
+++ b/ActionsContentViewLib/res/values/attrs.xml
@@ -36,6 +36,10 @@
         <attr name="actions_layout" format="reference"/>
         <!-- Content layout ID to link at view creation time. -->
         <attr name="content_layout" format="reference"/>
+        <!-- Drawable to be used to draw shadow dropped by content view to actions one. -->
+        <attr name="shadow_drawable" format="reference"/>
+        <!-- Shadow width. -->
+        <attr name="shadow_width" format="dimension" />
     </declare-styleable>
 
 </resources>
