--- a/ActionsContentViewExample/res/values/arrays.xml
+++ b/ActionsContentViewExample/res/values/arrays.xml
@@ -1,6 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  Copyright 2012 Steven Rudenko
+  
+  Licensed under the Apache License, Version 2.0 (the "License");
+  you may not use this file except in compliance with the License.
+  You may obtain a copy of the License at
+  
+    http://www.apache.org/licenses/LICENSE-2.0
+  
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License.
+-->
 <resources>
-    <array name="site_icons">
+    <!-- Actions -->
+    <array name="actions_icons">
+        <item>@null</item>
+        <item>@drawable/ic_action_about</item>
+        <item>@drawable/ic_action_settings</item>
+        <item>@null</item>
         <item>@drawable/ic_link_dropbox</item>
         <item>@drawable/ic_link_evernote</item>
         <item>@drawable/ic_link_facebook</item>
@@ -15,5 +35,76 @@
         <item>@drawable/ic_link_yandex</item>
         <item>@drawable/ic_link_youtube</item>
     </array>
+    <string-array name="actions_names">
+        <item>Sandbox</item>
+        <item>About</item>
+        <item>Settings</item>
+        <item>Bookmarks</item>
+        <item>Dropbox</item>
+        <item>Evernote</item>
+        <item>Facebook</item>
+        <item>GitHub</item>
+        <item>Google+</item>
+        <item>Last.fm</item>
+        <item>LinkedIn</item>
+        <item>Skype</item>
+        <item>Stackoverflow</item>
+        <item>Twitter</item>
+        <item>Vk</item>
+        <item>Yandex</item>
+        <item>Youtube</item>
+    </string-array>
+    <string-array name="actions_links">
+        <item>category://settings</item>
+        <item>settings://about</item>
+        <item>settings://settings</item>
+        <item>category://bookmarks</item>
+        <item>http://www.dropbox.com</item>
+        <item>http://www.evernote.com</item>
+        <item>http://www.facebook.com</item>
+        <item>http://www.github.com</item>
+        <item>http://plus.google.com</item>
+        <item>http://www.lastfm.com</item>
+        <item>http://www.linkedin.com</item>
+        <item>http://www.skype.com</item>
+        <item>http://www.stackoverflow.com</item>
+        <item>http://www.twitter.com</item>
+        <item>http://www.vk.com</item>
+        <item>http://www.yandex.com</item>
+        <item>http://www.youtube.com</item>
+    </string-array>
+
+    <!-- Settings arrays -->
+    <string-array name="spacing_types">
+        <item>Right Offset (RO)</item>
+        <item>Actions Width (AW)</item>
+    </string-array>
+    <string-array name="spacing_types_short">
+        <item>RO</item>
+        <item>AW</item>
+    </string-array>
+    <integer-array name="spacing_types_values">
+        <item>0</item>
+        <item>1</item>
+    </integer-array>
+
+    <string-array name="width_strings">
+        <item>0</item>
+        <item>8</item>
+        <item>16</item>
+        <item>24</item>
+        <item>32</item>
+        <item>48</item>
+        <item>64</item>
+    </string-array>
+    <integer-array name="width_values">
+        <item>0</item>
+        <item>8</item>
+        <item>16</item>
+        <item>24</item>
+        <item>32</item>
+        <item>48</item>
+        <item>64</item>
+    </integer-array>
 
 </resources>
