--- a/ActionsContentViewExample/res/values/dimens.xml
+++ b/ActionsContentViewExample/res/values/dimens.xml
@@ -16,5 +16,6 @@
 -->
 <resources>
     <dimen name="divider_size">.9dp</dimen>
+    <dimen name="divider_large_size">1.5dp</dimen>
     <dimen name="actions_spacing">44dp</dimen>
 </resources>
