--- a/ActionsContentViewExample/res/values/styles.xml
+++ b/ActionsContentViewExample/res/values/styles.xml
@@ -25,4 +25,11 @@
         <item name="android:minWidth">64dip</item>
     </style>
 
+    <style name="HeaderText" parent="@android:style/Widget.TextView">
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:layout_marginTop">8dip</item>
+    </style>
+
 </resources>
