--- a/ActionsContentViewExample/res/layout/settings.xml
+++ b/ActionsContentViewExample/res/layout/settings.xml
@@ -14,8 +14,22 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<resources>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/white" >
 
-    <string name="sources_link">https://github.com/StevenRudenko/ActionsContentView</string>
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingLeft="8dip"
+        android:paddingRight="8dip" >
 
-</resources>
+        <include layout="@layout/pref_spacing" />
+
+        <include layout="@layout/pref_shadow" />
+    </LinearLayout>
+
+</ScrollView>
