--- a/ActionsContentViewExample/res/values/defaults.xml
+++ b/ActionsContentViewExample/res/values/defaults.xml
@@ -15,7 +15,6 @@
   limitations under the License.
 -->
 <resources>
-
-    <string name="sources_link">https://github.com/StevenRudenko/ActionsContentView</string>
-
+    <bool name="default_pref_show_shadow">true</bool>
+    <dimen name="default_pref_shadow_width">16dip</dimen>
 </resources>
