- sandbox was created for spacing and shadow options

--- a/ActionsContentViewExample/res/layout/action_list_item.xml
+++ b/ActionsContentViewExample/res/layout/action_list_item.xml
@@ -19,10 +19,11 @@
     android:id="@android:id/text1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:drawablePadding="6dip"
     android:gravity="center_vertical"
     android:minHeight="48dip"
     android:paddingLeft="6dip"
     android:paddingRight="6dip"
-    android:drawablePadding="6dip"
+    android:singleLine="true"
     android:textAppearance="?android:attr/textAppearanceMedium"
     android:textColor="@android:color/white" />
