--- a/ActionsContentViewExample/res/layout/pref_spacing.xml
+++ b/ActionsContentViewExample/res/layout/pref_spacing.xml
@@ -54,7 +54,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <TextView
-            android:id="@+id/value"
+            android:id="@+id/prefSpacingTypeValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dip"
@@ -91,7 +91,17 @@
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <TextView
-            android:id="@+id/value"
+            android:id="@+id/prefSpacingWidthAdditionalValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dip"
+            android:singleLine="true"
+            android:text="100+"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/prefSpacingWidthValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dip"
@@ -128,7 +138,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <TextView
-            android:id="@+id/value"
+            android:id="@+id/prefSpacingActionsWidthValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dip"
