--- a/ActionsContentViewExample/res/layout/example.xml
+++ b/ActionsContentViewExample/res/layout/example.xml
@@ -15,8 +15,9 @@
   limitations under the License.
 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res/sample.actionscontentview"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res/sample.actionscontentview">
+    android:layout_height="match_parent" >
 
     <LinearLayout
         android:id="@+id/bottomBar"
@@ -65,7 +66,9 @@
         app:actions_layout="@layout/actions"
         app:actions_spacing="@dimen/actions_spacing"
         app:content_layout="@layout/content"
+        app:fade_max_value="@integer/default_pref_fade_max_value"
         app:fade_type="actions"
+        app:fling_duration="@integer/default_pref_fling_delay"
         app:shadow_drawable="@drawable/shadow"
         app:shadow_width="@dimen/default_pref_shadow_width" />
 
