--- a/ActionsContentViewLib/res/values/attrs.xml
+++ b/ActionsContentViewLib/res/values/attrs.xml
@@ -18,6 +18,7 @@
 
     <!-- Default spacing types. -->
     <attr name="spacing_type">
+
         <!-- Spacing will be calculated as offset from right bound of view. -->
         <enum name="right_offset" value="0" />
         <!-- Spacing will be calculated as right bound of actions container. -->
@@ -26,6 +27,7 @@
 
     <!-- Default fade types. -->
     <attr name="fade_type">
+
         <!-- Fade is disabled. -->
         <enum name="none" value="0" />
         <!-- Fade applies to actions container. -->
@@ -34,6 +36,15 @@
         <enum name="content" value="2" />
         <!-- Fade applies to every container. -->
         <enum name="both" value="3" />
+    </attr>
+
+    <!-- Default swiping types. -->
+    <attr name="swiping_type">
+
+        <!-- Swiping will be handled at any point of screen. -->
+        <enum name="full" value="0" />
+        <!-- Swiping will be handled starting from screen edge only. -->
+        <enum name="edge" value="1" />
     </attr>
 
     <declare-styleable name="ActionsContentView">
@@ -45,11 +56,11 @@
         <!-- Spacing value for actions container. -->
         <attr name="actions_spacing" format="dimension" />
         <!-- Actions layout ID to link at view creation time. -->
-        <attr name="actions_layout" format="reference"/>
+        <attr name="actions_layout" format="reference" />
         <!-- Content layout ID to link at view creation time. -->
-        <attr name="content_layout" format="reference"/>
+        <attr name="content_layout" format="reference" />
         <!-- Drawable to be used to draw shadow dropped by content view to actions one. -->
-        <attr name="shadow_drawable" format="reference"/>
+        <attr name="shadow_drawable" format="reference" />
         <!-- Shadow width. -->
         <attr name="shadow_width" format="dimension" />
         <!-- Fade type. -->
@@ -58,6 +69,10 @@
         <attr name="fade_max_value" format="integer" />
         <!-- Indicates how long flinging will take time in milliseconds. -->
         <attr name="fling_duration" format="integer" />
+        <!-- Swiping type. -->
+        <attr name="swiping_type" />
+        <!-- Swiping edge width. -->
+        <attr name="swiping_edge_width" format="dimension" />
     </declare-styleable>
 
 </resources>
