--- a/ActionsContentViewLib/res/values/defaults.xml
+++ b/ActionsContentViewLib/res/values/defaults.xml
@@ -19,4 +19,5 @@
     <dimen name="default_actionscontentview_actions_spacing">0dip</dimen>
     <integer name="default_actionscontentview_fade_max_value">170</integer>
     <integer name="default_actionscontentview_fling_duration">900</integer>
+    <dimen name="default_actionscontentview_swiping_edge_width">24dip</dimen>
 </resources>
