--- a/ActionsContentViewExample/res/layout/sandbox.xml
+++ b/ActionsContentViewExample/res/layout/sandbox.xml
@@ -29,6 +29,8 @@
 
         <include layout="@layout/pref_spacing" />
 
+        <include layout="@layout/pref_swiping" />
+
         <include layout="@layout/pref_shadow" />
 
         <include layout="@layout/pref_fade" />
