--- a/ActionsContentViewExample/res/layout/example.xml
+++ b/ActionsContentViewExample/res/layout/example.xml
@@ -31,6 +31,7 @@
             style="@style/HoloButton.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:contentDescription="@null"
             android:onClick="onActionsButtonClick"
             android:src="@drawable/ic_menu_moreoverflow_normal_holo_light" />
 
