--- a/ActionsContentViewExample/res/values/arrays.xml
+++ b/ActionsContentViewExample/res/values/arrays.xml
@@ -20,11 +20,13 @@
     <string-array name="effects_name">
         <item>@string/effect_parallax</item>
         <item>@string/effect_replace</item>
+        <item>@string/effect_alpha</item>
     </string-array>
 
     <array name="effect_layouts">
         <item>@layout/effect_parallax</item>
         <item>@layout/effect_replace</item>
+        <item>@layout/effect_alpha</item>
     </array>
 
     <!-- Actions -->
