--- a/ActionsContentViewExample/res/values/arrays.xml
+++ b/ActionsContentViewExample/res/values/arrays.xml
@@ -21,12 +21,14 @@
         <item>@string/effect_parallax</item>
         <item>@string/effect_replace</item>
         <item>@string/effect_alpha</item>
+        <item>@string/effect_duration</item>
     </string-array>
 
     <array name="effect_layouts">
         <item>@layout/effect_parallax</item>
         <item>@layout/effect_replace</item>
         <item>@layout/effect_alpha</item>
+        <item>@layout/effect_duration</item>
     </array>
 
     <!-- Actions -->
