--- a/ActionsContentViewExample/res/layout/effect_bounce.xml
+++ b/ActionsContentViewExample/res/layout/effect_bounce.xml
@@ -23,10 +23,12 @@
     app:actions_layout="@layout/effect_actions"
     app:actions_spacing="0dp"
     app:content_layout="@layout/effect_content"
-    app:effect_content="@anim/effect_duration_content"
+    app:effect_content="@anim/effect_bounce_content"
+    app:effect_on_fling_only="true"
     app:fade_max_value="@integer/default_pref_fade_max_value"
-    app:fade_type="both"
+    app:fade_type="actions"
     app:fling_duration="@integer/default_pref_fling_delay"
-    app:spacing="0dp"
+    app:shadow_drawable="@drawable/shadow"
+    app:shadow_width="@dimen/default_pref_shadow_width"
     app:swiping_interpolator="@android:anim/linear_interpolator"
     app:swiping_type="full" />
